tests/test_files_pa3/new/SemanticErrors/moreThanOneValidMain.ic
class A {
	static void main(string[] args) { }
}

class B {
	static void main(string[] args) { }
}